--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="index.css" rel="stylesheet">
 </head>
@@ -156,7 +156,7 @@
 
                     <div class="row mt-3">
                         <div class="col-12 d-flex justify-content-center">
-                            <button id="submit" type="submit" class="w-50 btn btn-primary">Submit</button>
+                            <button id="submit1" class="w-50 btn btn-primary">Submit</button>
                         </div>
                     </div>
                     <div class="row justify-content-center">
